--- a/07_ImplementingFourPrincipalVerbs/src/main/resources/application.yml
+++ b/07_ImplementingFourPrincipalVerbs/src/main/resources/application.yml
@@ -1,1 +1,22 @@
-spring.application.name=rest_with-spring-boot
+spring:
+  application:
+    name: rest_with-spring-boot
+    
+  datasource:
+     driver-class-name: com.mysql.cj.jdbc.Driver
+     url: jdbc:mysql://localhost:3306/rest_with_springboot?useTimeZone=true&serverTimeZone=UTC
+     username: root
+     password: 1234567   
+  jpa:
+     open-in-view: false
+     hibernate:
+      ddl-auto: update
+   # properties:
+    # hibernate:
+     # dialect: org.hibernate.dialect.MySQLDialect
+     show-sql: false 
+          
+
+
+
+
