--- a/07_ImplementingFourPrincipalVerbs/src/main/resources/application.yml
+++ b/07_ImplementingFourPrincipalVerbs/src/main/resources/application.yml
@@ -3,18 +3,23 @@ spring:
     name: rest_with-spring-boot
     
   datasource:
-     driver-class-name: com.mysql.cj.jdbc.Driver
-     url: jdbc:mysql://localhost:3306/rest_with_springboot?useTimeZone=true&serverTimeZone=UTC
-     username: root
-     password: 1234567   
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/rest_with_springboot?useTimeZone=true&serverTimeZone=UTC
+    username: root
+    password: 1234567   
   jpa:
-     open-in-view: false
-     hibernate:
+    open-in-view: false
+    hibernate:
       ddl-auto: none
-   # properties:
-    # hibernate:
-     # dialect: org.hibernate.dialect.MySQLDialect
-     show-sql: false 
+    # properties:
+    #   hibernate:
+    #     dialect: org.hibernate.dialect.MySQLDialect
+    show-sql: false
+
+springdoc:
+  pathsToMatch: /**/v1/**
+  swagger-ui:
+    use-root-path: true
           
 
 
