--- a/07_ImplementingFourPrincipalVerbs/pom.xml
+++ b/07_ImplementingFourPrincipalVerbs/pom.xml
@@ -14,6 +14,7 @@
 	<name>rest_with-spring-boot</name>
 	<properties>
 		<java.version>21</java.version>	
+		<java-jwt.version>3.18.3</java-jwt.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -24,6 +25,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>	
+			
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>		
 		
 		<dependency>
